EPMRPP-113915 || EPMRPP-113917 || EPMRPP-113965 || Fix role dropdown visibility, add org type icon, sort the org list (#5112)
* EPMRPP-113915 || EPMRPP-113917 || EPMRPP-113965 || Fix role dropdown visibility, add org type icon, sort the org list

* EPMRPP-113915 || Code review fixes - 0

--- a/app/src/pages/inside/common/assignments/manageAssignmentsInstanceModal/manageAssignmentsInstanceModal.scss
+++ b/app/src/pages/inside/common/assignments/manageAssignmentsInstanceModal/manageAssignmentsInstanceModal.scss
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+.modal-content {
+  position: relative;
+}
+
 .admin-info {
   margin-bottom: 24px;
 }
